writeup work, mainly ch3, ch4, notation

--- a/tex/ch1.tex
+++ b/tex/ch1.tex
@@ -201,6 +201,8 @@ design of a facility and the start of the first saleable production batch.
 
 \subsection{Problem Definition}\label{SS.probdef}
 
+%TODO
+\textbf{TODO: Rewrite this section and include some figures from visio}
 The task of designing a buffer preparation area is complex.
 Current workflows are largely based on trial-and-error methods using process
 engineering scheduling software.  
