--- a/tex/notation.tex
+++ b/tex/notation.tex
@@ -22,68 +22,80 @@
 \begin{longtabu} to \textwidth {X[-1,l] X[1,l]<{\strut} X[-1,r]}
     \tb{Symbol} & \tb{Description} & \tb{Ref}\\\hline
     \endhead
-    $c_{m}$ & (Relative) cost of vessel $m$ & \ref{S.vesseldata}\\
-    $k$ & Secondary buffer index $\left( k \in N, k \ne n \right)$
-        & \ref{SS.constr6}\\
-    $m$ & Vessel size index $\left( m \in M \right)$ & \ref{S.vesseldata}\\
-    $n$ & Buffer index $\left( n \in N \right)$ & \ref{S.bufferdata}\\
-    $p$ & Slot index $\left( p \in P \right)$ & \ref{S.slots}\\
-    $\boldsymbol{q}_{n}$ & Boolean decision variable: Buffer $n$ hold operation
-        starts in cycle prior to the one in which it finishes 
-        & \ref{SS.constr8}\\
-    $r_{\mathit{MINFILL}}$ & Vessel minimum fill ratio & \ref{S.parameters}\\
-    $r_{\mathit{UTIL}}$ & Preparation slot maximum utilisation ratio
+    $\boldsymbol{a}_{nk}$ & boolean; buffers $n$ and $k$ prepared in same
+    vessel & \ref{SS.constr6}\\
+    $c_{m}$ & (relative) cost of vessel $m$ & \ref{S.vesseldata}\\
+    $f_{\mathit{MINFILL}}$ & vessel minimum fill ratio & \ref{S.parameters}\\
+    $f_{\mathit{UTIL}}$ & preparation slot maximum utilisation ratio
         & \ref{S.parameters}\\
-    $t_{\mathit{USE},n}$ & Buffer $n$ time of first use, relative to batch
-        start & \ref{S.bufferdata}\\
-    $t_{\mathit{USE},n}^{*}$ & Buffer $n$ time of first use, relative to batch
-        start, modulo cycle time & \ref{SS.constr8}\\
-    $\Delta t_{\mathit{HOLD,MAX}}$ & Maximum allowable buffer hold duration
+    $k$ & secondary buffer index $\left( k \in N, k \ne n \right)$
+        & \ref{SS.schedintro}\\
+    $m$ & vessel size index $\left( m \in M \right)$ & \ref{S.vesseldata}\\
+    $n$ & buffer index $\left( n \in N \right)$ & \ref{S.bufferdata}\\
+    $p$ & slot index $\left( p \in P \right)$ & \ref{S.slots}\\
+    $\boldsymbol{q}_{n}$ & boolean; 
+        $t_{\mathit{USE},n} - \boldsymbol{z}_{n} < 0$ & \ref{SS.prepreftimes}\\
+    $\boldsymbol{r}_{n}$ & boolean; 
+        $t_{\mathit{USE},n} - \boldsymbol{z}_{n} < 0$ & \ref{SS.cyclic}\\
+    $\boldsymbol{s}_{n}$ & boolean; 
+        $t_{\mathit{USE},n} - \boldsymbol{z}_{n} < 0$ & \ref{SS.cyclic}\\
+    $t_{\mathit{LOWER},n}$ & lower bound of feasible scheduling region for all
+        buffers $k > n$ with respect to buffer $n$ & \ref{SS.cyclic}\\
+    $t_{\mathit{UPPER},n}$ & upper bound of feasible scheduling region for all
+        buffers $k > n$ with respect to buffer $n$ & \ref{SS.cyclic}\\
+    $t_{\mathit{PREP},k}$ & preparation reference time for buffer $k$ 
+        & \ref{SS.prepreftimes}\\
+    $t_{\mathit{PREP},n}$ & preparation reference time for buffer $n$ 
+        & \ref{SS.prepreftimes}\\
+    $t_{\mathit{USE},n}$ & buffer $n$ time of first use, normalised
+        & \ref{S.bufferdata}\\
+    $t_{\mathit{USE},n}^{*}$ & buffer $n$ time of first use, unnormalised 
+        & \ref{S.bufferdata}\\
+    $\Delta t_{\mathit{HOLD,MAX}}$ & maximum allowable buffer hold duration
         & \ref{S.parameters}\\
-    $\Delta t_{\mathit{HOLD,MIN}}$ & Minimum allowable buffer hold duration
+    $\Delta t_{\mathit{HOLD,MIN}}$ & minimum allowable buffer hold duration
         & \ref{S.parameters}\\
-    $\Delta t_{\mathit{HOLD,POST}}$ & Duration of post-use operations in buffer
+    $\Delta t_{\mathit{HOLD,POST}}$ & duration of post-use operations in buffer
         hold procedures & \ref{S.parameters}\\
-    $\Delta t_{\mathit{HOLD,PRE}}$ & Duration of operations prior to receiving
+    $\Delta t_{\mathit{HOLD,PRE}}$ & duration of operations prior to receiving
         buffer in buffer hold procedures & \ref{S.parameters}\\
-    $\Delta t_{\mathit{PREP,PRE}}$ & Duration of operations prior to
+    $\Delta t_{\mathit{PREP,PRE}}$ & duration of operations prior to
         transferring out buffer in buffer preparation procedures & 
         \ref{S.parameters}\\
-    $\Delta t_{\mathit{PREP,POST}}$ & Duration of operations post transferring
+    $\Delta t_{\mathit{PREP,POST}}$ & duration of operations post transferring
         out buffer in buffer preparation procedures & \ref{S.parameters}\\
-    $\Delta t_{\mathit{PREP,TOTAL}}$ & Total duration of buffer preparation
+    $\Delta t_{\mathit{PREP}}$ & total duration of buffer preparation
         procedure & \ref{SS.constr4}\\
-    $\Delta t_{\mathit{USE},n}$ & Duration of use of buffer $n$ 
+    $\Delta t_{\mathit{USE},n}$ & duration of use of buffer $n$ 
         & \ref{S.bufferdata}\\
-    $\Delta t_{\mathit{TRANSFER}}$ & Duration of transfer from buffer
+    $\Delta t_{\mathit{TRANSFER}}$ & duration of transfer from buffer
         preparation vessel to buffer hold vessel & \ref{S.parameters}\\
-    $\boldsymbol{u}_{nk}$ & Boolean: Buffer $k$ is prepared before buffer $n$
-        & \ref{SS.constr8}\\
-    $\boldsymbol{v}_{nk}$ & Boolean: Distinct buffers $n$ and $k$ are both made
-        in the same slot& \ref{SS.constr7}\\
-    $\boldsymbol{w}_{nkp}$ & Boolean: Distinct buffers $n$ and $k$ are both
+    $\boldsymbol{u}_{n}$ & boolean; single feasible scheduling window for 
+        buffer $k > n$ with respect to buffer $n$ & \ref{SS.cyclic}\\
+    $\boldsymbol{v}_{nk}$ & boolean; feasible scheduling window for buffer
+        $k > n$ is before buffer $n$ preparation procedure & \ref{SS.cyclic}\\
+    $\boldsymbol{w}_{nkp}$ & boolean; distinct buffers $n$ and $k$ are both
         made in slot $p$ & \ref{SS.constr6}\\
-    $\boldsymbol{x}_{np}$ & Boolean: Buffer $n$ is prepared in slot $p$
+    $\boldsymbol{x}_{np}$ & boolean; buffer $n$ is prepared in slot $p$
         & \ref{SS.constr1}\\
-    $\boldsymbol{y}_{mp}$ & Boolean: A vessel of size $m$ is in slot $p$
+    $\boldsymbol{y}_{mp}$ & boolean; a vessel of size $m$ is in slot $p$
         & \ref{S.objfn}\\
-    $\boldsymbol{z}_{n}$ & Buffer $n$ hold duration & \ref{SS.constr5}\\
+    $\boldsymbol{z}_{n}$ & buffer $n$ hold duration & \ref{SS.constr5}\\
     $M$ & Set of vessel sizes & \ref{S.vesseldata}\\
-    $\mathcal{M}$ & Number of vessel sizes & \ref{S.vesseldata}\\
+    $\mathcal{M}$ & number of vessel sizes & \ref{S.vesseldata}\\
     $N$ & Set of buffers & \ref{S.bufferdata}\\
-    $\mathcal{N}$ & Number of buffers & \ref{S.bufferdata}\\
+    $\mathcal{N}$ & number of buffers & \ref{S.bufferdata}\\
     $P$ & Set of slots & \ref{S.slots}\\
-    $\mathcal{P}$ & Number of slots & \ref{S.slots}\\
-    $U_{n}$ & Volume of buffer $n$ to be preapred & \ref{S.bufferdata}\\
-    $V_{m}$ & Maximum working volume of vessel size $m$ & \ref{S.vesseldata}\\
-    $V_{\mathit{MAX}}$ & Largest maximum working volume of available vessel
+    $\mathcal{P}$ & number of slots & \ref{S.slots}\\
+    $T$ & process cycle time (start--to--start duration) & \ref{S.parameters}\\
+    $U_{n}$ & volume of buffer $n$ to be preapred & \ref{S.bufferdata}\\
+    $V_{m}$ & maximum working volume of vessel size $m$ & \ref{S.vesseldata}\\
+    $V_{\mathit{MAX}}$ & largest maximum working volume of available vessel
         sizes & \ref{SS.constr3}\\
-    $\boldsymbol{Y}$ & Secondary objective: Sum of buffer hold times,
+    $\boldsymbol{Y}$ & secondary objective; sum of buffer hold times,
         given minimal total vessel cost & \ref{SS.goal}\\
-    $\boldsymbol{Z}$ & Primary objective: Total vessel cost & \ref{S.objfn}\\
-    $Z^{\prime}$ & Minimal total vessel cost & \ref{SS.goal}\\
-    $\lambda$ & Process cycle time (start--to--start duration)
-        & \ref{S.parameters}\\
+    $\boldsymbol{Z}$ & primary objective; total vessel cost & \ref{S.objfn}\\
+    $Z^{\prime}$ & minimal total vessel cost & \ref{SS.goal}\\
 \end{longtabu}
 
 }
@@ -99,5 +111,6 @@ Both subscript types may be used simultaneously, e.g. in the case of
 $t_{USE,n}$.
 
 A prime suprescript denotes an optimum value, e.g. $Z^{\prime}$.
-An asterisk suprescript denotes modulo cycle time, e.g.
-$t_{\mathit{USE},n}^{*} \equiv t_{\mathit{USE},n} \mod \lambda$.
+
+Greek letters are used throughout the text as `throwaway' variables, to
+explain certain concepts and are not included in the list of notation.
