--- a/tex/ch5.tex
+++ b/tex/ch5.tex
@@ -53,6 +53,10 @@ The equipment time utilisation plot for the sample data given in
     \caption{Model complexity -- equations}
     \label{fig.eqns}
 \end{figure}
+
+%TODO
+\textbf{TODO: recalculate complexities in light of model changes}
+
 The notation for complexity in this section is according to \citet{Knuth:1976}.
 
 Noting that there is a weak dependence on $\mathcal{M}$ and that as the problem
@@ -95,3 +99,6 @@ $\Theta \left( \mathcal{N}^2 \right)$.
 %TODO
 \textbf{TODO: time taken as a function of input size and as a function of 
     solver choice}
+    
+%TODO
+\textbf{TODO: boxplots of time taken as a function of input size}
