--- a/tex/ch6.tex
+++ b/tex/ch6.tex
@@ -18,3 +18,9 @@
 \section{Introduction}\label{S.intro6}
 
 In this chapter we examine \ldots
+
+%TODO
+\textbf{TODO: interesting things about the results}
+
+%TODO
+\textbf{TODO: scope for further work}
