boxplots, misc code tidying

--- a/tex/ch1.tex
+++ b/tex/ch1.tex
@@ -17,8 +17,8 @@
 
 \begin{quote}
 Well I don't think we're \emph{for} anything. We're just products of evolution.
-You can say, ``Gee, your life must be pretty bleak if you don't think there's a
-purpose.'' But I'm anticipating having a good lunch.
+You can say, `Gee, your life must be pretty bleak if you don't think there's a
+purpose.' But I'm anticipating having a good lunch.
 
 \hspace{2cm}--- James Watson, \emph{in conversation with Richard Dawkins}
 \end{quote}
@@ -200,9 +200,17 @@ the state of the art has often moved on between the finish of the detailed
 design of a facility and the start of the first saleable production batch.
 
 \subsection{Problem Definition}\label{SS.probdef}
+\begin{figure}
+    \centering
+    \includegraphics[angle=0,scale=1]{./figures/buffer_pfd.pdf}
+    \caption{Buffer preparation schematic}
+    \label{fig.pfd}
+\end{figure}
+
 
 %TODO
-\textbf{TODO: Rewrite this section and include some figures from visio}
+\textbf{TODO: Rewrite this section}
+
 The task of designing a buffer preparation area is complex.
 Current workflows are largely based on trial-and-error methods using process
 engineering scheduling software.  
