--- a/tex/ch3.tex
+++ b/tex/ch3.tex
@@ -455,3 +455,14 @@ As the model detailed in
 such plots were a useful way of highlighting logical flaws or bugs in the code.
 With the finished model, such plots are a useful tool for convincing
 colleagues and clients that a proposed vessel selection is feasible.
+
+\section{Data Sources}\label{S.sources}
+
+\subsection{Random Data}\label{SS.randomdata}
+\textbf{TODO: describe briefly how random data was obtained; more in code
+        description in methodology chapter}
+        
+\subsection{Real-World Data}\label{SS.realdata}
+\textbf{Describe real-world data sets, list some of these as appendices and
+        include their plots in results or as appendices}
+
