--- a/tex/ch4.tex
+++ b/tex/ch4.tex
@@ -1645,9 +1645,6 @@ and all other software was then installed unmodified.
 \hyperref[tbl.libs]{Table \ref*{tbl.libs}} lists the installed python
 libraries.
 
-
-
-
 \begin{table}[h!]
     \centering
     \caption{Python libraries}
@@ -1666,6 +1663,6 @@ libraries.
 
 \subsection{Model Code}\label{SS.modelcode}
 
-\subsection{Plotting Code}\label{SS.modelcode}
+\subsection{Plotting Code}\label{SS.plotcode}
 
 
