--- a/tex/ch5.tex
+++ b/tex/ch5.tex
@@ -99,6 +99,13 @@ $\Theta \left( \mathcal{N}^2 \right)$.
 %TODO
 \textbf{TODO: time taken as a function of input size and as a function of 
     solver choice}
+\begin{figure}
+    \centering
+    \includegraphics{./figures/timing.pdf}
+    \caption{Solution time as a function of buffer count}
+    \label{fig.timing}
+\end{figure}
+    
     
 %TODO
 \textbf{TODO: boxplots of time taken as a function of input size}
